[ux] fix nav z-index bug

--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -52,9 +52,9 @@ body#home {
 #menu_wrapper {
   position: fixed;
   top: 0;
-  z-index: 9999;
   width: 960px;
-  margin: 0 auto; }
+  margin: 0 auto;
+  z-index: 10; }
 
 #uber_menu {
   font-family: "Futura Book", "Futura Light", "Futura", "Futura Medium", "FuturaMedium", "Gill Sans", "Helvetica", "Arial", sans-serif;
@@ -72,8 +72,7 @@ body#home {
   -khtml-border-radius: 3px 3px;
   -o-border-radius: 3px 3px;
   -border-radius: 3px 3px;
-  border-radius: 3px 3px;
-  li: hover; }
+  border-radius: 3px 3px; }
   #uber_menu li {
     display: inline;
     font-size: 0.9em; }
